--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>SyncOps - Service Catalog</title>
+    <title>Get To Prod - GTP</title>
   </head>
   <body>
     <div id="root"></div>
